done but i don't know how to fix not responsive "card-title".

--- a/css/components/common.css
+++ b/css/components/common.css
@@ -121,7 +121,7 @@ Clickable button in full height
 }
 
 .profile-cards .card-title {
-    padding: 20px;
+    padding: 20px 20px 17px;
     background-color: #e1e6ea;
     -webkit-transition: background-color .3s;
     -o-transition: background-color .3s;
@@ -134,6 +134,9 @@ Clickable button in full height
     -webkit-transition: color .2s;
     -o-transition: color .2s;
     transition: color .2s;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .profile-cards .card-title p {
@@ -285,7 +288,7 @@ Clickable button in full height
     }
 }
 
-@media (min-width: 1180px) {
+@media (min-width: 1240px) {
     .profile-cards {
         margin: 0 -30px;
     }
