--- a/css/components/typography.css
+++ b/css/components/typography.css
@@ -25,13 +25,13 @@ img {
 }
 
 p, ul, ol {
-    margin: 0 0 1em;
+    margin: 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
     line-height: 1.2;
     font-weight: 700;
-    margin: 0 0 .5em;
+    margin: 0;
 }
 
 h1 {
@@ -40,6 +40,7 @@ h1 {
 
 h2 {
     font-size: 16px;
+    margin-bottom: 9px;
 }
 
 h3 {
